--- a/springboot/src/main/resources/application-dev.yml
+++ b/springboot/src/main/resources/application-dev.yml
@@ -17,9 +17,9 @@ spring:
         cacheableDefaultExpSec: 12000
     datasource:
         dialect: mysql
-        url: 'jdbc:mysql://rm-uf6t6z36398zwi69uo.mysql.rds.aliyuncs.com:3306/chenpt?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false&allowMultiQueries=true'
+        url: 'jdbc:mysql://127.0.0.1:3306/chenpt?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&tinyInt1isBit=false&allowMultiQueries=true'
         username: 'root'
-        password: 'Chen1993'
+        password: 
         driver-class-name: 'com.mysql.jdbc.Driver'
         type: com.alibaba.druid.pool.DruidDataSource
         initialSize: 1
